option('with_query', type : 'boolean', value : false, description : 'Run real query test(need postgresql server setup)')

option ('profile',
  type: 'combo',
  value: 'development',
  choices: ['default', 'development'],
  description: 'The build profile for the app. If none specified, "development" is used.'
)
